deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datavirke-dk
  namespace: datavirke-website
  labels:
    app.kubernetes.io/name: datavirke
spec:
  replicas: 9
  selector:
    matchLabels:
      app.kubernetes.io/name: datavirke
  template:
    metadata:
      labels:
        app.kubernetes.io/name: datavirke
    spec:
      containers:
        - name: web
          image: registry.kronform.pius.dev/datavirke.dk/datavirke.dk:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: false
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: datavirke
  namespace: datavirke-website
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: datavirke
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: datavirke
  namespace: datavirke-website
spec:
  ingressClassName: nginx
  rules:
    - host: datavirke.dk
      http:
        paths:
          - backend:
              service:
                name: datavirke
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
    - host: www.datavirke.dk
      http:
        paths:
          - backend:
              service:
                name: datavirke
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - datavirke.dk
        - www.datavirke.dk
      secretName: datavirke.dk-tls
